--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>        
-        <title>LOGIN</title>
+        <title>Smart Traffic</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
         <link href="http://cloudfront.linkbynet.com/v7/favicon.ico?BuildVersion=2015.02.11.1" rel='shortcut icon'>
