--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
   <!-- <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"> -->
 </head>
 
-<body onclick="renderTable()" id="haha" class="bg-gradient-primary">
+<body onclick="renderTable()" id="haha" class="bg-primary">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <!--
